feat: vertical analysis, horizontal analysis, ordeing